<resources>
    <string name="app_name">Share The Ride</string>
    <string name="navigation_drawer_open">Navigation menu opened</string>
    <string name="navigation_drawer_close">Navigation menu closed</string>
    <string name="header_title">Header Title</string>
    <string name="title_click">Title Click</string>
    <string name="menu_trips">Trip list</string>
    <string name="menu_create_trip">Create a trip</string>
    <string name="menu_show_my_trips">Show my trips</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_register">Register</string>
    <string name="menu_login_register">Login/Register</string>
    <string name="menu_send">Send</string>
    <string name="menu_share">Share</string>
    <string name="copyright">Kyprianidis IHU</string>
    <string name="menu_group">Group</string>
    <string name="menu_group_login">Users section</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_re">Re-enter password</string>
    <string name="click_to_login">Already a user? Login</string>
    <string name="click_to_register">Not a user? Register</string>
    <string name="click_to_reset">Click to Reset Password</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="car_size">Car size</string>
    <string name="car_plate">Car plate</string>
    <string name="phone_number">Phone number</string>
    <string name="update">Update</string>
    <string name="search_start">Search your starting location</string>
    <string name="search_end">Search your arrival location</string>
    <string name="confirm_start">Confirm your starting location</string>
    <string name="confirm_end">Confirm your arrival location</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>