<?xml version="1.0" encoding="utf-8"?>

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/nav_trips">

    <fragment
        android:id="@+id/nav_trips"
        android:name="com.example.sharetheride.HomeContentFragment"
        android:label="@string/menu_trips"
        tools:layout="@layout/home_fragment">
        <argument
            android:name="text_id"
            android:defaultValue="@string/menu_trips"
            app:argType="reference" />
    </fragment>

    <fragment
        android:id="@+id/nav_create_trip"
        android:name="com.example.sharetheride.HomeContentFragment"
        android:label="@string/menu_create_trip"
        tools:layout="@layout/home_fragment">
        <argument
            android:name="text_id"
            android:defaultValue="@string/menu_gallery"
            app:argType="reference" />
    </fragment>

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.sharetheride.HomeContentFragment_KK"
        android:label="@string/menu_profile">
        <argument
            android:name="text_id"
            android:defaultValue="@string/menu_profile"
            app:argType="reference" />
    </fragment>

    <fragment
        android:id="@+id/nav_log_reg"
        android:name="com.example.sharetheride.HomeContentFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/home_fragment">
        <argument
            android:name="text_id"
            android:defaultValue="@string/menu_share"
            app:argType="reference" />
    </fragment>

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.sharetheride.HomeContentFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/home_fragment">
        <argument
            android:name="text_id"
            android:defaultValue="@string/menu_send"
            app:argType="reference" />
    </fragment>

</navigation>